# cookiecutter-simplemspy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README.txt  cookiecutter.json  locustfile.py  noxfile.py  profile.html  profile.json  pyproject.toml  setup.sh  test_log_file_creation.py
additional/: check_proxy.py  close_chromes.py  create_account_tg.py
docs/: conf.py  index.rst
hooks/: .gitkeep  pre_gen_project.py
my_awesome_project/src/my_awesome_project/: __init__.py
src/: __init__.py  main.py
src/api/: deps.py  main.py
src/api/v1/: __init__.py
src/core/: __init__.py  config.py  logging_config.py
src/db/: __init__.py  base.py  base_repository.py  database.py
src/models/: __init__.py
src/name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/schemas/: __init__.py  common.py
src/services/: __init__.py  base_service.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_health.py
tests/unit/: __init__.py  test_config.py  test_logging_config.py  test_main_module.py  test_sample_unit.py  test_schemas.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  loki.yaml  noxfile.py  pyproject.toml  setup.sh
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/scripts/: setup.sh  setup2.sh
{{cookiecutter.project_slug}}/src/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/api/: deps.py  health.py  main.py  tasks.py
{{cookiecutter.project_slug}}/src/cookiecutter_project_slug.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
{{cookiecutter.project_slug}}/src/core/: __init__.py  config.py  logging_config.py
{{cookiecutter.project_slug}}/src/db/: __init__.py  base.py  database.py
{{cookiecutter.project_slug}}/src/models/: __init__.py
{{cookiecutter.project_slug}}/src/my_awesome_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
{{cookiecutter.project_slug}}/src/pythonjsonlogger/: __init__.py  jsonlogger.py
{{cookiecutter.project_slug}}/src/repository/: __init__.py  redis_repo.py
{{cookiecutter.project_slug}}/src/services/: __init__.py  base_service.py  tasks_service.py
{{cookiecutter.project_slug}}/src/utils/: __init__.py  metrics.py  redis_stream.py  tracing.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}.egg-info/: requires.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/api/: health.py  main.py  tasks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/core/: __init__.py  config.py  logging_config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/middleware/: __init__.py  metrics.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/models/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/repository/: redis_repo.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/schemas/: __init__.py  common.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/services/: __init__.py  browser.py  task_processor.py  tasks_service.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.python_package_name}}/utils/: __init__.py  circuitbreaker.py  metrics.py  redis_stream.py  tracing.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_api_health.py  test_api_tasks.py  test_metrics_middleware.py  test_shutdown.py
{{cookiecutter.project_slug}}/tests/unit/: __init__.py  test_config.py  test_logging_config.py  test_main_module.py  test_metrics.py  test_redis_repo.py  test_schemas.py  test_task_processor.py  test_tasks_service.py
